--- a/config.js.dist
+++ b/config.js.dist
@@ -6,22 +6,29 @@
 module.exports = {
   discord: {
     // The Discord token of the Bot to post through.
-    token: process.env.DISCORD_TOKEN,
+    // token: process.env.DISCORD_TOKEN,
     // The ID of the discord channel to post battleboard infos to.
-    feedChannelId: process.env.ALBION_FEED_CHANNEL_ID,
+    // feedChannelId: process.env.ALBION_FEED_CHANNEL_ID,
     // The ID of the discord channel to post albion status infos to.
-    statusChannelId: process.env.ALBION_STATUS_CHANNEL_ID
+    // statusChannelId: process.env.ALBION_STATUS_CHANNEL_ID
+
+    token: "NDc1MzQ5NzA1NTY0NDg3Njky.DkoC7w.BuLMbTKA2qykaecYWNTaxWUgSSE",
+    battleChannelId: "399060221072244736",
+    killChannelId: "399061339990917140"
   },
   guild: {
     // The name of your guild (or guilds, if the guild is large).
-    guilds: process.env.ALBION_GUILDS
-    ? process.env.ALBION_GUILDS.split(',') : [],
+    //guilds: process.env.ALBION_GUILDS
+    //? process.env.ALBION_GUILDS.split(',') : [],
     // The alliance your guild belongs to
-    alliance: process.env.ALBION_ALLIANCE
+    //alliance: process.env.ALBION_ALLIANCE
+
+    guilds: ['A N I M A', 'Albion History X', 'Augusta Vindelicorum', 'Backstab of Trust', 'BlackOut', 'Blaze', 'Brotherhood of Unity', 'Bursztynowy Kartel', 'Crimson Imperium Reborn', 'Er3ktile Disfunction', 'FURIA', 'Guild Not Found', 'Hammer And Sickle', 'Infinite', 'Last Legion', 'Mind If I Roll Need', 'Noelreac', 'Patrulha da Noite', 'Plebians', 'Say My Metatrone', 'ScoiaTael', 'Smooth Criminal', 'The Accountant', 'The Diplomat', 'Tragedy', 'Unbound Time', 'Warpath', 'Warpath Warehouse', 'ZORN', 'Zaibatsu'],
+    alliance: 'POE'
   },
   battle: {
     // Min players to report as battle
-    minPlayers: 10,
+    minPlayers: 50,
     // Min guild players to report as battle
     minRelevantPlayers: 3
   },
